@@ -2256,7 +2256,7 @@ void                KDE_UpdateFocusedWindow(void);
 void                KDE_SetNumDesktops(void);
 void                KDE_NewWindow(EWin * ewin);
 void                KDE_RemoveWindow(EWin * ewin);
-void                KDE_UpdateTitle(EWin * ewin);
+void                KDE_UpdateClient(EWin * ewin);
 
 /* sound.c functions */
 Sample             *LoadWav(char *file);
