@@ -2078,3 +2078,11 @@ menu.
 Added some group issues to TODO file. I hope I get to finish that
 during this week.
 
+
+-------------------------------------------------------------------------------
+
+Mon Sep 20 19:41:17 PDT 1999
+(Mandrake)
+
+yet more kde fixes.  Hopefully most of the window operations menu in kpanel
+ should work now
